0029176: Exception while projection 2D-point on 2D-line

DRAW-command "2dproj" has been changed. Now, it can return not only 2D-line as extrema but 2D-point.

Test case has been updated.